--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "generate": "fvm flutter build_runner build --delete-conflicting-outputs",
+    "generate": "fvm flutter pub run build_runner build --delete-conflicting-outputs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
