--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  redux: ^5.0.0
-  flutter_redux: ^0.10.0
-  redux_thunk: ^0.4.0
+  
+  # State Management
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  
+  # Dependency Injection
   get_it: ^7.6.7
+  
+  # API & Models
   queries:
     path: packages/queries
+  riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -57,11 +63,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+  # Code Generation
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   freezed: ^2.5.0
   build_runner: ^2.4.14
   json_serializable: ^6.9.3
+  
+  # Riverpod Code Generation
+  riverpod_generator: ^2.6.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
